//
// Copyright 2021 DXOS.org
//

syntax = "proto3";

import "dxos/halo/keys.proto";

package dxos.halo.invitations;

// Mock invitation process

message AdmitDeviceRequest {
  dxos.keys.PublicKey deviceKey = 1;
  dxos.keys.PublicKey controlFeedKey = 2;
  dxos.keys.PublicKey dataFeedKey = 3;
}

// Inviter verbs
service InviterInvitationService {
  rpc AdmitDevice(AdmitDeviceRequest) returns (google.protobuf.Empty);
}

message AcceptIdenityRequest {
  dxos.keys.PublicKey identityKey = 1;
  dxos.keys.PublicKey haloSpaceKey = 2;
  dxos.keys.PublicKey genesisFeedKey = 3;
}

// Invitee verbs
service InviteeInvitationService {
  rpc AcceptIdenity(AcceptIdenityRequest) returns (google.protobuf.Empty);
}
